[gd_scene load_steps=12 format=3 uid="uid://c2enchvmfcua7"]

[ext_resource type="Script" uid="uid://b7xdyvam1jnpg" path="res://Scripts/Chara_Movement.gd" id="1_in0ad"]
[ext_resource type="Texture2D" uid="uid://bmmu3bkulbhor" path="res://sprites/characters/Sprite-0002.png" id="2_pe2k5"]
[ext_resource type="Texture2D" uid="uid://ci5wo3n1p1p73" path="res://sprites/characters/Sprite-0003.png" id="3_ffaye"]
[ext_resource type="PackedScene" uid="uid://bej655obpoitl" path="res://Scenes/inventory_ui.tscn" id="4_14mih"]
[ext_resource type="PackedScene" uid="uid://dsc0dbeu865uh" path="res://Scenes/bloodtrail.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://c0kqjdkjmxm6i" path="res://Scenes/Stamina_bar.tscn" id="6_ra1gp"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(31, 32)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pe2k5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ffaye")
}, {
"duration": 1.0,
"texture": ExtResource("2_pe2k5")
}],
"loop": true,
"name": &"walkdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ffaye")
}, {
"duration": 1.0,
"texture": ExtResource("2_pe2k5")
}],
"loop": true,
"name": &"walkleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ffaye")
}, {
"duration": 1.0,
"texture": ExtResource("2_pe2k5")
}],
"loop": true,
"name": &"walkright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ffaye")
}, {
"duration": 1.0,
"texture": ExtResource("2_pe2k5")
}],
"loop": true,
"name": &"walkup",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bkb0v"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color = Color(0.580392, 0.0823529, 0.0823529, 1)

[sub_resource type="FontFile" id="FontFile_qycxt"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xfolv"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimatedSprite2D:animation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CollisionShape2D:disabled")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("AnimatedSprite2D:visible")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("bleeding:emitting")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_in0ad")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(0.984375, 1)
sprite_frames = SubResource("2")
animation = &"walkdown"

[node name="bleeding" parent="." instance=ExtResource("5")]
emitting = false
amount = 200
lifetime = 60.0
randomness = 1.0
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_bkb0v")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_top = 210.0
offset_right = -84.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.290196, 0.152941, 1)

[node name="Label" type="Label" parent="InventoryUI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_top = 25.0
offset_right = 26.5
offset_bottom = 55.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "INVENTAIRE"
vertical_alignment = 1

[node name="Inventory" parent="InventoryUI" instance=ExtResource("4_14mih")]
offset_right = 0.0
offset_bottom = 0.0

[node name="InteractUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InteractUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = 260.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.388235, 0.290196, 0.152941, 1)

[node name="Label" type="Label" parent="InteractUI/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = SubResource("FontFile_qycxt")
theme_override_font_sizes/font_size = 30
text = "E"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xfolv")

[node name="Stamina_bar" parent="." instance=ExtResource("6_ra1gp")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 214.0
offset_top = 140.0
offset_right = 278.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
